--- a/training_data_ingestion_test/Training_data_test.ipynb
+++ b/training_data_ingestion_test/Training_data_test.ipynb
@@ -124,6 +124,8 @@
    "outputs": [],
    "source": [
     "# Merge classes into one feature collection\n",
+    "# This creates and object that cannot be displayed due to API limit\n",
+    "# TO DO test to see if can still extract training pixels using this merged data or if will have to revert to class by class\n",
     "all_classes = class_1.merge(class_2).merge(class_3).merge(class_4).merge(class_5).merge(class_6).merge(class_7).merge(class_8).merge(class_9).merge(class_10).merge(class_11).merge(class_12).merge(class_13).merge(class_14).merge(class_15).merge(class_16).merge(class_17).merge(class_18).merge(class_19)"
    ]
   },
