--- a/data_stack_testing/sentinel1.ipynb
+++ b/data_stack_testing/sentinel1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -232,8 +232,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -478,7 +480,7 @@
        "     [27.390896512881636, 52.215894288509645]]]}}}"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,13 +498,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ee.image.Image"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(median_stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75888d1039934ec18212bc705582f218",
+       "model_id": "ff5fc9dee93043f7a6723c4c910dec1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -519,13 +541,12 @@
     "#month_list = [11]\n",
     "\n",
     "Map = geemap.Map(center=(51.85, 27.8), zoom=9)\n",
-    "\n",
+    "Map.add_basemap('SATELLITE')\n",
     "for i, START_DATE in enumerate(START_DATE_LIST[0:6]):\n",
     "    vis = {'min': -50,'max': 1,'bands': [f'{START_DATE[0:7]}_VV', \n",
     "                                         f'{START_DATE[0:7]}_VH', \n",
     "                                         f'{START_DATE[0:7]}_VH']}\n",
     "    Map.addLayer(median_stack, vis, f'S1_{START_DATE}')\n",
-    "Map.add_basemap('SATELLITE')\n",
     "Map"
    ]
   },
