added data_stack_tools_v1.py for tidy data stack compilation

--- a/data_stack_testing/data_import_v1.ipynb
+++ b/data_stack_testing/data_import_v1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +350,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_data_stack(aoi, start_date_list, s2_params):\n",
+    "    \"\"\" \n",
+    "    convience function to compile and combine all distinct dataset sub-stacks\n",
+    "    * Sentinel 1 data bands: 'VV', 'VH' [monthly]\n",
+    "    * Sentinel 2 data bands:'B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B8A', 'B11', 'B12' [monthly]\n",
+    "\n",
+    "    :param aoi: ee.featurecollection.FeatureCollection, used to indicate AOI extent \n",
+    "    :param start_date_list: list, strings used to define start of each month, expects 'YYYY-MM-01' format\n",
+    "    :param s2_params: dict, contains parameters used for cloud & shadow masking   \n",
+    "    :return: ee.image.Image\n",
+    "\n",
+    "    \"\"\"\n",
+    "    s1_stack = fetch_sentinel1(aoi, start_date_list)\n",
+    "    s2_stack = fetch_sentinel2(aoi, start_date_list, s2_params)\n",
+    "    combined_stack = s1_stack.addBands(s2_stack)\n",
+    "    return combined_stack\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,11 +401,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fetch_sentinel1(): hello!\n",
+      "fetch_sentinel1(): processing month 2019-01-01\n",
+      "fetch_sentinel1(): processing month 2019-02-01\n",
+      "fetch_sentinel1(): processing month 2019-03-01\n",
+      "fetch_sentinel1(): processing month 2019-04-01\n",
+      "fetch_sentinel1(): processing month 2019-05-01\n",
+      "fetch_sentinel1(): processing month 2019-06-01\n",
+      "fetch_sentinel1(): processing month 2019-07-01\n",
+      "fetch_sentinel1(): processing month 2019-08-01\n",
+      "fetch_sentinel1(): processing month 2019-09-01\n",
+      "fetch_sentinel1(): processing month 2019-10-01\n",
+      "fetch_sentinel1(): processing month 2019-11-01\n",
+      "fetch_sentinel1(): processing month 2019-12-01\n",
+      "fetch_sentinel1(): bye!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f85a1972085442ac9122bfad8d4371db",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[51.85, 27.8], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# get S1\n",
     "s1_stack = fetch_sentinel1(aoi, start_date_list)\n",
@@ -368,11 +450,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fetch_sentinel2(): hello!\n",
+      "fetch_sentinel2(): processing month 2019-01-01\n",
+      "fetch_sentinel2(): processing month 2019-02-01\n",
+      "fetch_sentinel2(): processing month 2019-03-01\n",
+      "fetch_sentinel2(): processing month 2019-04-01\n",
+      "fetch_sentinel2(): processing month 2019-05-01\n",
+      "fetch_sentinel2(): processing month 2019-06-01\n",
+      "fetch_sentinel2(): processing month 2019-07-01\n",
+      "fetch_sentinel2(): processing month 2019-08-01\n",
+      "fetch_sentinel2(): processing month 2019-09-01\n",
+      "fetch_sentinel2(): processing month 2019-10-01\n",
+      "fetch_sentinel2(): processing month 2019-11-01\n",
+      "fetch_sentinel2(): processing month 2019-12-01\n",
+      "fetch_sentinel2(): bye!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7bbe37a9cab34ba4a33fc71ed56ea4e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[51.85, 27.8], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# get S2\n",
     "s2_stack = fetch_sentinel2(aoi, start_date_list, s2_params)\n",
@@ -382,12 +497,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fetch_sentinel1(): hello!\n",
+      "fetch_sentinel1(): processing month 2019-01-01\n",
+      "fetch_sentinel1(): processing month 2019-02-01\n",
+      "fetch_sentinel1(): processing month 2019-03-01\n",
+      "fetch_sentinel1(): processing month 2019-04-01\n",
+      "fetch_sentinel1(): processing month 2019-05-01\n",
+      "fetch_sentinel1(): processing month 2019-06-01\n",
+      "fetch_sentinel1(): processing month 2019-07-01\n",
+      "fetch_sentinel1(): processing month 2019-08-01\n",
+      "fetch_sentinel1(): processing month 2019-09-01\n",
+      "fetch_sentinel1(): processing month 2019-10-01\n",
+      "fetch_sentinel1(): processing month 2019-11-01\n",
+      "fetch_sentinel1(): processing month 2019-12-01\n",
+      "fetch_sentinel1(): bye!\n",
+      "fetch_sentinel2(): hello!\n",
+      "fetch_sentinel2(): processing month 2019-01-01\n",
+      "fetch_sentinel2(): processing month 2019-02-01\n",
+      "fetch_sentinel2(): processing month 2019-03-01\n",
+      "fetch_sentinel2(): processing month 2019-04-01\n",
+      "fetch_sentinel2(): processing month 2019-05-01\n",
+      "fetch_sentinel2(): processing month 2019-06-01\n",
+      "fetch_sentinel2(): processing month 2019-07-01\n",
+      "fetch_sentinel2(): processing month 2019-08-01\n",
+      "fetch_sentinel2(): processing month 2019-09-01\n",
+      "fetch_sentinel2(): processing month 2019-10-01\n",
+      "fetch_sentinel2(): processing month 2019-11-01\n",
+      "fetch_sentinel2(): processing month 2019-12-01\n",
+      "fetch_sentinel2(): bye!\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4facf85537ca412a8f8bd7609938ba9e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[51.85, 27.8], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "sss = s2_stack.addBands(s1_stack)\n",
-    "sss.getInfo()"
+    "#sss = s2_stack.addBands(s1_stack)\n",
+    "#sss.getInfo()\n",
+    "\n",
+    "stack = create_data_stack(aoi, start_date_list, s2_params)\n",
+    "stack.getInfo()\n",
+    "\n",
+    "lat=51.85\n",
+    "lon=27.8\n",
+    "\n",
+    "Map = geemap.Map(center=(lat, lon), zoom=9)\n",
+    "Map.add_basemap('SATELLITE')\n",
+    "\n",
+    "vis = {'min': -0.0,'max': 3000,'bands': [f'S2_B4_2019-04', f'S2_B3_2019-04', f'S2_B2_2019-04']}\n",
+    "Map.addLayer(stack, vis, f'S2_rgb_2019-04')\n",
+    "vis = {'min': -0.0,'max': 3000,'bands': [f'S2_B8_2019-04', f'S2_B4_2019-04', f'S2_B3_2019-04']}\n",
+    "Map.addLayer(stack, vis, f'S2_fcc_2019-04')\n",
+    "vis = {'min': -0.0,'max': 3000, 'bands': [f'S2_B8_2019-04']}\n",
+    "Map.addLayer(stack, vis, f'S2_B8_2019-04')\n",
+    "vis = {'min': -0.0,'max': 3000, 'bands': [f'S2_B12_2019-04']}\n",
+    "Map.addLayer(stack, vis, f'S2_B12_2019-04')\n",
+    "vis = {'min': -50,'max': 1, 'bands': [f'S1_VV_2019-04', f'S1_VH_2019-04', f'S1_VH_2019-04']}\n",
+    "Map.addLayer(stack, vis, f'S1_VV_VH_2019-04')\n",
+    "Map"
    ]
   }
  ],
