added fetch_topography func to grab static DEM based layers

--- a/data_stack_testing/00_test_data_stack_tools.ipynb
+++ b/data_stack_testing/00_test_data_stack_tools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "sys.path.append(\"/home/markdj/repos/Polesia-Landcover/data_stack_testing/\")\n",
     "import ee\n",
     "from geemap import geemap\n",
-    "from data_stack_tools_v1 import create_data_stack\n",
+    "from data_stack_tools_v1 import create_data_stack, map_topography\n",
     "ee.Initialize()"
    ]
   },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -90,7 +90,9 @@
       "fetch_sentinel2(): processing month 2019-10-01\n",
       "fetch_sentinel2(): processing month 2019-11-01\n",
       "fetch_sentinel2(): processing month 2019-12-01\n",
-      "fetch_sentinel2(): bye!\n"
+      "fetch_sentinel2(): bye!\n",
+      "fetch_topography(): hi!\n",
+      "fetch_topography(): bye!\n"
      ]
     }
    ],
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1332,56 @@
        "   'dimensions': [2, 2],\n",
        "   'origin': [27, 51],\n",
        "   'crs': 'EPSG:4326',\n",
-       "   'crs_transform': [1, 0, 0, 0, 1, 0]}],\n",
+       "   'crs_transform': [1, 0, 0, 0, 1, 0]},\n",
+       "  {'id': 'elevation',\n",
+       "   'data_type': {'type': 'PixelType',\n",
+       "    'precision': 'int',\n",
+       "    'min': -32768,\n",
+       "    'max': 32767},\n",
+       "   'dimensions': [5899, 2697],\n",
+       "   'origin': [745495, 28023],\n",
+       "   'crs': 'EPSG:4326',\n",
+       "   'crs_transform': [0.0002777777777777778,\n",
+       "    0,\n",
+       "    -180.0001388888889,\n",
+       "    0,\n",
+       "    -0.0002777777777777778,\n",
+       "    60.00013888888889]},\n",
+       "  {'id': 'slope',\n",
+       "   'data_type': {'type': 'PixelType',\n",
+       "    'precision': 'float',\n",
+       "    'min': 0,\n",
+       "    'max': 90},\n",
+       "   'crs': 'EPSG:4326',\n",
+       "   'crs_transform': [0.0002777777777777778,\n",
+       "    0,\n",
+       "    -180.0001388888889,\n",
+       "    0,\n",
+       "    -0.0002777777777777778,\n",
+       "    60.00013888888889]},\n",
+       "  {'id': 'aspect',\n",
+       "   'data_type': {'type': 'PixelType',\n",
+       "    'precision': 'float',\n",
+       "    'min': 0,\n",
+       "    'max': 360},\n",
+       "   'crs': 'EPSG:4326',\n",
+       "   'crs_transform': [0.0002777777777777778,\n",
+       "    0,\n",
+       "    -180.0001388888889,\n",
+       "    0,\n",
+       "    -0.0002777777777777778,\n",
+       "    60.00013888888889]},\n",
+       "  {'id': 'topographic_diversity',\n",
+       "   'data_type': {'type': 'PixelType', 'precision': 'float'},\n",
+       "   'dimensions': [677, 310],\n",
+       "   'origin': [85378, 7332],\n",
+       "   'crs': 'EPSG:4326',\n",
+       "   'crs_transform': [0.002425451267122708,\n",
+       "    0,\n",
+       "    -180.00001488697754,\n",
+       "    0,\n",
+       "    -0.002425451267122708,\n",
+       "    70.00094902042848]}],\n",
        " 'properties': {'system:footprint': {'type': 'Polygon',\n",
        "   'coordinates': [[[27.390896512881636, 52.215894288509645],\n",
        "     [27.28375045749374, 52.17067849106585],\n",
@@ -1426,7 +1477,7 @@
        "     [27.390896512881636, 52.215894288509645]]]}}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,13 +1495,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "810b02b2937348109ad8a6f77f7a1c6d",
+       "model_id": "28d8f73fc3a44df2a86bd354bd3705b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1478,6 +1529,37 @@
     "vis = {'min': -50,'max': 1, 'bands': [f'S1_VV_2019-04', f'S1_VH_2019-04', f'S1_VH_2019-04']}\n",
     "Map.addLayer(stack, vis, f'S1_VV_VH_2019-04')\n",
     "Map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "check topo derived layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "981efd1c0b1b45ed85c395ef70456e2f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[51.85, 27.8], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map_topography(stack)"
    ]
   }
  ],
