--- a/classification_testing/Pipeline_test_1.ipynb
+++ b/classification_testing/Pipeline_test_1.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "085674cb-a141-4e57-8b09-996abe80ee97",
    "metadata": {},
    "outputs": [
@@ -128,10 +128,19 @@
     "print('Using random forest to classify region...')\n",
     "classified = stack.select(trainingbands).classify(clf)\n",
     "\n",
+    "# Display classification\n",
     "Map = geemap.Map(center=(52, 28), zoom=8)\n",
     "Map.addLayer(classified.randomVisualizer(), {}, 'Classified')\n",
     "Map"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a180c84a-8a76-4748-a223-53fdac6a9b74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
